--- a/src/components/common/paginator/Paginator.module.css
+++ b/src/components/common/paginator/Paginator.module.css
@@ -1,4 +1,13 @@
+.paginator {
+	margin: 10px;
+}
 
-.selectedPageNumber{
+.pageNumber {
+	padding: 2px;
+	border: 1px solid grey;
+}
+
+.pageNumber.selectedPage {
 	font-weight: bold;
+	border-color: black;
 }
