--- a/src/components/profile/profileinfo/ProfileName.module.css
+++ b/src/components/profile/profileinfo/ProfileName.module.css
@@ -1,3 +1,17 @@
 .description {
 	padding: 10px;
 }
+
+.mainPhoto {
+	width: 200px;
+}
+
+.contact {
+	padding-left: 10px;
+}
+
+.formSummaryError {
+	border: solid red 3px;
+	padding: 5px;
+	color: red;
+}
